--- a/code/css/style.css
+++ b/code/css/style.css
@@ -1,3 +1,22 @@
 .hidden {
     display: none;
 }
+
+body{
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+    z-index: -1;
+    opacity: 50%;
+}
